--- a/src/app/modulos/estadisticas/reportes-alumnos/reportes-alumnos.component.html
+++ b/src/app/modulos/estadisticas/reportes-alumnos/reportes-alumnos.component.html
@@ -1,5 +1,18 @@
 
 <div class="container mt-5">
+
+  <div class="row">
+    <div class="col-12">
+      <h1 class="text-center mb-4">Número de reportes por alumno</h1>
+    </div>
+    <div class="col-12 text-center mb-4">
+      <button class="btn  d-flex align-items-center justify-content-center" (click)="openInfoDialog()"
+        style="cursor: pointer;">
+        <img src="assets/images/info-5.png" alt="Información" style="width: 30px; height: 30px; margin-right: 8px;">
+        <span>Mostrar Información</span>
+      </button>
+    </div>
+  </div>
     <div class="row">
       <div class="col-md-4" *ngFor="let obj of reportesAlumnos">
         <div class="card">
