--- a/src/app/modulos/estadisticas/preguntas-por-alumnos/preguntas-por-alumnos.component.html
+++ b/src/app/modulos/estadisticas/preguntas-por-alumnos/preguntas-por-alumnos.component.html
@@ -16,7 +16,7 @@
   </div>
   
   <div @fadeInStagger *ngFor="let pregunta of preguntasAlumnos" class="mb-4">
-    <h3 class="mb-3 text-primary">{{ pregunta.alumno.usuario.nombre }}</h3>
+    <h3 class="mb-3 text-primary">{{ pregunta.nombre }}</h3>
 
     <div class="d-flex justify-content-between align-items-center">
       <div class="col-9">
