--- a/src/app/modulos/estadisticas/test-por-alumnos/test-por-alumnos.component.html
+++ b/src/app/modulos/estadisticas/test-por-alumnos/test-por-alumnos.component.html
@@ -38,7 +38,7 @@
       <!-- Nombre del Alumno -->
       <div class="card-header bg-info text-white" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);">
 
-        <h3 class="test-title mb-0">{{ estadisticaTest.alumno.usuario.nombre }}</h3>
+        <h3 class="test-title mb-0">{{ estadisticaTest.nombre }}</h3>
       </div>
       <div class="card-body">
 
