--- a/src/app/modulos/estadisticas/test-por-test/test-por-test.component.html
+++ b/src/app/modulos/estadisticas/test-por-test/test-por-test.component.html
@@ -32,7 +32,7 @@
           <div *ngFor="let estadistica of estadisticaTest.estadisticas" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             <div class="flex-grow-1">
               <!-- Nombre del Alumno más grande -->
-              <h4 class="mb-1">{{ estadistica.alumno.usuario.nombre }}</h4>
+              <h4 class="mb-1">{{ estadistica.nombre }}</h4>
             </div>
             <div class="text-right">
               <!-- Puntuaciones del Alumno -->
