--- a/src/app/modulos/web-main/perfil/perfil.component.html
+++ b/src/app/modulos/web-main/perfil/perfil.component.html
@@ -20,7 +20,7 @@
         <div class="card">
           <div class="card-header text-center">
             <h2>{{ perfil.nombreReal }}</h2>
-            <h4 class="text-muted">{{ perfil.nombreUsuario }}</h4>
+            <h4 class="text-muted">{{ perfil.nombreReal }}</h4>
           </div>
           <div class="card-body">
             <form [formGroup]="perfilForm" (ngSubmit)="guardarPerfil()">
@@ -50,7 +50,7 @@
                 <label for="nombreReal">Nombre Real</label>
                 <input type="text" id="nombreReal" class="form-control" formControlName="nombreReal">
               </div>
-              <div class="form-group">
+              <div *ngIf="!esProfesor()" class="form-group">
                 <label for="nombreUsuario">Nombre Visible</label>
                 <input type="text" id="nombreUsuario" class="form-control" formControlName="nombreVisible">
               </div>
