--- a/src/app/modulos/estadisticas/preguntas-reportadas/preguntas-reportadas.component.html
+++ b/src/app/modulos/estadisticas/preguntas-reportadas/preguntas-reportadas.component.html
@@ -13,15 +13,16 @@
       </button>
     </div>
   </div>
-    <div class="row">
-      <div class="col-md-4" *ngFor="let obj of reportesAlumnos">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">{{ obj.nombreAlumno }}</h5>
-            <p class="card-text">Cantidad: {{ obj.cantidad }}</p>
-          </div>
+  <div class="row">
+    <div class="col-md-4" *ngFor="let obj of reportesAlumnos">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title" style="font-size: 1.5em;">{{ obj.nombreAlumno }}</h5>
+          <p class="card-text">Cantidad: {{ obj.cantidad }}</p>
         </div>
       </div>
     </div>
+  </div>
+  
   </div>
   
