--- a/src/app/modulos/estadisticas/reportes-alumnos/reportes-alumnos.component.html
+++ b/src/app/modulos/estadisticas/reportes-alumnos/reportes-alumnos.component.html
@@ -17,7 +17,7 @@
       <div class="col-md-4" *ngFor="let obj of reportesAlumnos">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">{{ obj.nombreAlumno }}</h5>
+            <h5 class="card-title" style="font-size: 1.5em;">{{ obj.nombreAlumno }}</h5>
             <p class="card-text">Cantidad: {{ obj.cantidad }}</p>
           </div>
         </div>
