--- a/src/app/modulos/estadisticas/tier-list/tier-list.component.html
+++ b/src/app/modulos/estadisticas/tier-list/tier-list.component.html
@@ -16,7 +16,7 @@
       <div class="col-md-4" *ngFor="let tier of listaTiers">
         <div class="card mb-3">
           <div class="card-body" (click)="navegar(tier.id)">
-            <h5 class="card-title">{{ tier.nombre }}</h5>
+            <h5 class="card-title" style="font-size: 1.5em;">{{ tier.nombre }}</h5>
           </div>
         </div>
       </div>
